2007-08-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: improve error reporting for foreach
	  statements

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/clutter-0.4.deps, vapi/clutter-0.4.vala,
	  vapi/packages/clutter-0.4/: remove clutter bindings, will be moved
	  to clutter svn

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* gee/hashmap.vala, gee/hashset.vala, vapi/glib-2.0.vala,
	  gobject-introspection/gidl.vala: replace reference-type structs by
	  classes, requires r539 to build

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala: fix object creation for non-GObject
	  classes without creation method

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorinterface.vala,
	  gobject/valacodegeneratormethod.vala, vapi/glib-2.0.vala: remove
	  obsolete ctype attribute

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valasemanticanalyzer.vala,
	  gobject/valacodegenerator.vala, gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratormethod.vala, vapi/glib-2.0.vala: support
	  classes without base class

2007-08-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala, vala/valasemanticanalyzer.vala,
	  gobject/valacodegenerator.vala, gobject/valacodegeneratorclass.vala:
	  don't implicitly derive from GLib.Object in preparation for a more
	  consistent type system

	* gee/arraylist.vala, gee/hashmap.vala, gee/hashset.vala,
	  gee/iterable.vala, gee/iterator.vala, gee/list.vala, gee/map.vala,
	  gee/readonlycollection.vala, gee/readonlylist.vala,
	  gee/readonlymap.vala, gee/readonlyset.vala,
	  vala/valabindingprovider.vala, vala/valacodecontext.vala,
	  vala/valacodenode.vala, vala/valacodevisitor.vala,
	  vala/valascope.vala, vala/valasourcefile.vala,
	  vala/valasourcefilecycle.vala, vala/valasourcereference.vala,
	  ccode/valaccodenode.vala, ccode/valaccodewriter.vala,